Controller buttons now work on button press instead of button down
Controllers now take D-Pad input in menus, also working on button press
Fixed bug where dropping out players would override other players when signing back in
Gamemode Setup menu now displays "Unlimited" properly when choosing to have no time/score limit
Bug fixes, mostly related to Back and Neutron

8.25.13
PlayerNeo now slows game timer

8.24.13
PlayerSetupMenu, GamemodeSetupMenu, TeamSetupMenu now all are functional and have prototyped UI.
Gameplaystate now is initialized based on data set in GlobalData from the setup menus.
Terrible terrible things have happened, need to fix soon or we'll forget and the world will end. See Todo.
Added time and score limits in GameplayState
Added placeholder GameOverState

8.22.13
Removed vsync and set minimum delta to 1 (previous was 24). Vastly increased framerate and smoothness.
Sorted out attendant bugs, mostly related to not scaling by delta correctly in update methods.
Minor audiovisual bugfixes
Added lore

8.21.13
PlayerBack slows when turning. Speed lost directly proportional to degrees turned. Values might be too nerfed now, needs balancing.
PlayerBack rotation code made incredibly smarter. Should have no more direction switches when rotating too fast or wrong way throws.
PlayerTwoTouch's "pilot" tilts to indicate the current amount of curve
PlayerTwoTouch rotation code similarly improved
PlayerTricky and PlayerEnforcer graphical bugfixes
PlayerDash short dash can no longer be activated during the cooldown of a previous shortdash

8.20.13
PlayerTwoTouch has a little extra curve
PlayerTwoTouch's predictor ball doesn't make sounds anymore
Characters made more visually distinct
Analog sticks bounding box increased

8.14.13
Menu System created
	Keyboard and XBOX Controller Support
	Options Menu
Controller Wrapper created
PlayerBack graphical updates
PlayerTricky and PlayerBack keyboard controls.