@@ -1,6 +1,8 @@
 [DISPLAY]
-SCREENWIDTH = 800
-SCREENHEIGHT = 600
+
+SCREENWIDTH = 1280
+SCREENHEIGHT = 720
+
 FULLSCREEN = false
 
 [AUDIO]
